# audiGen-cli

./: Code Checklist.xlsx  Impact Analysis Template.xlsx  pyproject.toml  sampleCases.xlsx
audigen_cli/: excelWriter.py  extractor.py  llm_client.py  main.py  utils.py
template/: BTS-10307-Impact Analysis.xlsx  Code Review Checklist.xlsx  Impact Analysis.xlsx  Impact Analysis1.xlsx  Test Cases.xlsx  Vendor initiation date and time should be captured in the checklevel report.docx  sampleCases.xlsx
